2014-05-08  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/agentes/agent_wizard.snmp_explorer.php:
	In 'Other SNMP data', check if the targer supports
	these items.

2014-05-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * include/functions_tags.php: Fixed ACL tags in complex
        scenarios (profiles with groups, tags and propagation).

2014-05-08  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php
	godmode/menu.php
	godmode/massive/massive_operations.php
	include/javascript/pandora.js: Add massive operation for
	satellite agents threshold edition. This is the part on the 
	open side that hooks with enterprise code.

	* extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql: 
	images/networkmap/satellite.png
	images/os_icons/satellite_small.png
	images/os_icons/satellite.png
	images/op_satellite.png: Add icon to satellite OS

2014-05-08  Junichi Satoh  <junichi@rworks.jp>

	* godmode/servers/manage_recontask.php,
	godmode/servers/manage_recontask_form.php: Replaced json_encode()
	with io_json_mb_encode() to avoid invalid encoding with multi-byte
	characters.

2014-05-07  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_visual_map.php: Now the linked
	visual consoles are opened in another page.

2014-05-07  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php, include/functions_networkmap.php: clean
	source code style.
	
	* include/functions_modules.php: added function
	"modules_get_interfaces".

2014-05-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb_data.sql
	  include/functions_config.php
	  extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	  extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	  extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	  pandoradb.data.postgreSQL.sql