@@ -1,3 +1,8 @@
+2014-05-08  Koichiro KIKUCHI <koichiro@rworks.jp>
+
+	* godmode/agentes/agent_wizard.snmp_interfaces_explorer.php:
+	 (Re)added ifXTable support to the SNMP interface wizard.
+
 2014-05-08  Vanessa Gil  <vanessa.gil@artica.es>
 
 	* godmode/agentes/agent_wizard.snmp_explorer.php:
